--- a/config/database.yml
+++ b/config/database.yml
@@ -25,15 +25,12 @@ default: &default
 
 development:
   <<: *default
-  database: Recipe_app_development
-  username: postgres
-  password: 12345
+  database: rails_recipe_app_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-
   #username: rails_recipe_app
 
   # The password associated with the postgres role (username).
@@ -63,8 +60,6 @@ development:
 test:
   <<: *default
   database: rails_recipe_app_test
-  username: postgres
-  password: 12345
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
