--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: 1234
+  # username: postgres
+  # password: 12345
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -84,5 +84,6 @@ test:
 production:
   <<: *default
   database: rails_recipe_app_production
-  # username: rails_recipe_app
-  # password: <%= ENV["RAILS_RECIPE_APP_DATABASE_PASSWORD"] %>
+  username: rails_recipe_app
+  password: <%= ENV["RAILS_RECIPE_APP_DATABASE_PASSWORD"] %>
+   url: <%= ENV["DATABASE_URL"]
